# codelattice

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  GOVERNANCE.md  LICENSE  PROVENANCE.md  QUALITY.md  README.md
.sisyphus/run-continuation/: ses_1c0a0dc1affeBVCAF9hg4GMemX.json  ses_1c5d90f4bffeCDgGFdIjA7zmkv.json
crates/analysis-engine/: Cargo.toml
crates/analysis-engine/src/: adapter.rs  cache.rs  dag.rs  executor.rs  job.rs  lib.rs  reducer.rs
crates/analysis-scheduler/: Cargo.toml
crates/arkts/: Cargo.toml
crates/arkts/src/: graph.rs  lib.rs  project.rs
crates/arkts/src/extractors/: component.rs  mod.rs  state.rs  ui.rs
crates/c/: Cargo.toml
crates/c/src/: compile_commands.rs  graph.rs  include_resolution.rs  lib.rs  project.rs
crates/c/src/extractors/: include.rs  mod.rs  symbol.rs
crates/c/tests/: include_compile_commands.rs
crates/cangjie/: Cargo.toml  build.rs
crates/cangjie/src/: graph.rs  lib.rs  manifest.rs  project.rs
crates/cangjie/src/diagnostics/: mod.rs  runner.rs  types.rs
crates/cangjie/src/extractors/: imports.rs  mod.rs  references.rs  symbol.rs
crates/cangjie/src/subprocess/: cjpm_tree.rs  mod.rs
crates/cangjie/tests/: alias_reference.rs  constructor_extraction.rs  cross_file_import_confidence.rs  cross_file_reference.rs  endpoint_integrity.rs  function_call_reference.rs  graph_contract.rs  graph_parity_smoke.rs  import_resolution.rs  manifest_integration.rs  multi_project_smoke.rs  reference_extraction.rs  tree_sitter_smoke.rs
crates/cli/: Cargo.toml
crates/cli/src/: ai_runtime.rs  arkts_bridge.rs  bridge_format.rs  c_bridge.rs  cangjie_bridge.rs  cpp_bridge.rs  engine_bridge.rs  language_detect.rs  lib.rs  main.rs  mcp_facade.rs  mcp_job.rs  mcp_server.rs  python_bridge.rs  rust_bridge.rs  shell_bridge.rs  unified_types.rs
crates/cli/tests/: arkts_typescript.rs  bridge_roundtrip.rs  cangjie_inspect.rs  mcp_server.rs  productization_commands.rs  project_model_call_expected_compare.rs  project_model_expected_compare.rs  project_model_graph_contract.rs  project_model_graph_emit.rs  project_model_graph_expected_compare.rs  project_model_import_expected_compare.rs  project_model_inspect.rs  project_model_symbol_expected_compare.rs
crates/cpp/: Cargo.toml
crates/cpp/src/: compile_commands.rs  graph.rs  include_resolution.rs  lib.rs  project.rs
crates/cpp/src/extractors/: call.rs  include.rs  mod.rs  symbol.rs
crates/cpp/tests/: include_compile_commands.rs
crates/javascript/: Cargo.toml
crates/javascript/src/: graph.rs  lib.rs  manifest.rs  module_resolution.rs  project.rs
crates/javascript/src/extractors/: imports.rs  mod.rs  references.rs  symbol.rs
crates/project-model/: Cargo.toml
crates/project-model/src/: calls.rs  diagnostic.rs  graph.rs  imports.rs  item.rs  lib.rs  manifest.rs  model.rs  module_path.rs  output.rs  root_resolution.rs  source.rs  stdlib_index.rs  stdlib_tables.rs
crates/python/: Cargo.toml
crates/python/src/: graph.rs  lib.rs  module_resolution.rs  project.rs
crates/python/src/extractors/: call.rs  import.rs  mod.rs  symbol.rs
crates/python/tests/: import_resolution.rs
crates/shell/: Cargo.toml
crates/typescript/: Cargo.toml
crates/typescript/src/: graph.rs  lib.rs  manifest.rs  module_resolution.rs  project.rs  tsconfig.rs
crates/typescript/src/extractors/: imports.rs  mod.rs  references.rs  symbol.rs
crates/typescript/tests/: path_alias_resolution.rs
crates/workspace-model/: Cargo.toml
docs/: README.en.md  RISK_LEDGER.md  getting-started.md  real-project-corpus-baseline.json  real-project-corpus.json  real-project-corpus.md  release-install.md  release-packaging.md  release-versioning.md  smoke-targets-config.md
docs/architecture/: bridge-preflight.md  confidence-reason-policy.md  consumer-contract.md  gitnexus-rc-consumer-dry-run.md  graph-schema-v0.md  language-adapter-contract.md  mcp-local-client-setup.md  mcp-v0-contract.md  output-contract.md  project-model.md  rust-calls-confidence-matrix.md  unified-output-contract.md
docs/decisions/: command-authority.md  known-limitations.md  no-edge-policy.md
docs/fixtures/: expected-json-schema.md  fixture-index.md
docs/guides/: README.md  ai-mcp-tool-guide.md  ai-prompt-cookbook.md  workflow-presets.md
docs/mcp/: ai-usage-guide.md
docs/migration/: from-gitnexus-rc.md  source-map.md
docs/plans/: 2026-05-04-calls-large-file-maintenance-preflight.md  2026-05-04-calls-stdlib-tables-extraction-closure-review.md  2026-05-04-calls-stdlib-tables-extraction-execution-card.md  2026-05-06-cangjie-phase2-slice1-closure-review.md  2026-05-06-cangjie-phase2-slice1-execution-card.md  2026-05-06-cangjie-phase2-slice10-execution-card.md  2026-05-06-cangjie-phase2-slice10-preflight.md  2026-05-06-cangjie-phase2-slice11-execution-card.md  2026-05-06-cangjie-phase2-slice11-preflight.md  (+296 more)
fixtures/call-resolution/c1-same-module/: Cargo.toml  expected-calls.json  expected-graph.json
fixtures/call-resolution/c1-same-module/src/: delta_target.rs  lib.rs
scripts/: alpha-trial-smoke.sh  build.sh  c-real-project-smoke.sh  cangjie-live-codelattice-smoke.sh  cangjie-production-alias-check.sh  check-release-metadata.sh  codelattice-detect-changes-smoke.sh  codelattice-installed-acceptance.sh  codelattice-installed-mcp-job-smoke.sh  codelattice-mcp-ai-usability-smoke.sh  codelattice-mcp-concurrency-smoke.sh  codelattice-mcp-facade-smoke.sh  codelattice-mcp-workspace-smoke.sh  codelattice-mcp.sh  codelattice-open-nwe-readonly-smoke.sh  codelattice-precommit-check.sh  codelattice-snapshot-gen.py  cpp-real-project-smoke.sh  fresh-clone-smoke.sh  install-mcp.sh  install-release.sh  js-ts-corpus-smoke.sh  linux-source-build-smoke.sh  mcp-cache-smoke.sh  mcp-dogfood.sh  mcp-local-client-smoke.sh  mcp-real-client-dry-run.sh  package-release.sh  project-insights-smoke.sh  promote-to-local-tool.sh  python-real-project-smoke.sh  real-project-corpus-smoke-test.py  real-project-corpus-smoke.py  release-manifest.sh  release-smoke.sh  smoke.sh  typescript-real-project-smoke.sh  verify-bridge.sh  webui-beta-sanity.sh  webui-browser-smoke.sh  (+15 more)
(+429 files in other folders)
