[workspace]
resolver = "2"
members = [
    "crates/analysis-scheduler",
    "crates/project-model",
    "crates/cli",
    "crates/cangjie",
    "crates/typescript",
    "crates/arkts",
    "crates/c",
    "crates/cpp",
    "crates/python",
    "crates/shell",
    "crates/workspace-model",
]

[workspace.package]
version = "0.15.0-beta.1"
edition = "2021"
license = "MIT"
