[package]
name = "gitnexus-arkts"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
tree-sitter-arkts = ["dep:tree-sitter", "dep:tree-sitter-typescript"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
gitnexus-typescript = { path = "../typescript" }
tree-sitter = { version = "0.26", optional = true }
tree-sitter-typescript = { version = "0.23", optional = true }
