[package]
name = "gitnexus-c"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
tree-sitter-c = ["dep:tree-sitter", "dep:tree-sitter-c"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tree-sitter = { version = "0.26", optional = true }
tree-sitter-c = { version = "0.23", optional = true }
