[package]
name = "gitnexus-cangjie"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
tree-sitter-cangjie = ["dep:tree-sitter", "dep:cc"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
toml = "0.8"
tree-sitter = { version = "0.26", optional = true }

[build-dependencies]
cc = { version = "1", optional = true }
