[package]
name = "gitnexus-rust-core-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["tree-sitter-extraction"]
tree-sitter-extraction = ["gitnexus-project-model/tree-sitter-extraction"]
tree-sitter-cangjie = ["gitnexus-cangjie/tree-sitter-cangjie"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gitnexus-project-model = { path = "../project-model" }
gitnexus-cangjie = { path = "../cangjie", optional = true }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
