[package]
name = "gitnexus-rust-core-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "codelattice"
path = "src/bin/codelattice.rs"

[[bin]]
name = "gitnexus-rust-core-cli"
path = "src/bin/gitnexus-rust-core-cli.rs"

[features]
default = ["tree-sitter-extraction"]
tree-sitter-extraction = ["gitnexus-project-model/tree-sitter-extraction"]
tree-sitter-cangjie = ["gitnexus-cangjie/tree-sitter-cangjie"]
tree-sitter-arkts = ["dep:gitnexus-arkts", "dep:gitnexus-typescript", "gitnexus-arkts/tree-sitter-arkts"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gitnexus-project-model = { path = "../project-model" }
gitnexus-cangjie = { path = "../cangjie", optional = true }
gitnexus-arkts = { path = "../arkts", optional = true }
gitnexus-typescript = { path = "../typescript", optional = true }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
