[package]
name = "gitnexus-rust-core-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "codelattice"
path = "src/bin/codelattice.rs"

[[bin]]
name = "gitnexus-rust-core-cli"
path = "src/bin/gitnexus-rust-core-cli.rs"

[features]
default = ["tree-sitter-extraction"]
tree-sitter-extraction = ["gitnexus-project-model/tree-sitter-extraction"]
tree-sitter-cangjie = ["gitnexus-cangjie/tree-sitter-cangjie"]
tree-sitter-arkts = ["dep:gitnexus-arkts", "dep:gitnexus-typescript", "gitnexus-arkts/tree-sitter-arkts"]
tree-sitter-typescript = ["dep:gitnexus-typescript", "gitnexus-typescript/tree-sitter-typescript"]
tree-sitter-javascript = ["dep:gitnexus-javascript", "gitnexus-javascript/tree-sitter-javascript", "dep:gitnexus-typescript", "gitnexus-typescript/tree-sitter-typescript"]
tree-sitter-c = ["dep:gitnexus-c", "gitnexus-c/tree-sitter-c"]
tree-sitter-cpp = ["dep:gitnexus-cpp", "gitnexus-cpp/tree-sitter-cpp"]
tree-sitter-python = ["dep:gitnexus-python", "gitnexus-python/tree-sitter-python"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gitnexus-project-model = { path = "../project-model" }
gitnexus-analysis-scheduler = { path = "../analysis-scheduler" }
gitnexus-cangjie = { path = "../cangjie", optional = true }
gitnexus-arkts = { path = "../arkts", optional = true }
gitnexus-typescript = { path = "../typescript", optional = true }
gitnexus-javascript = { path = "../javascript", optional = true }
gitnexus-c = { path = "../c", optional = true }
gitnexus-cpp = { path = "../cpp", optional = true }
gitnexus-python = { path = "../python", optional = true }
gitnexus-shell = { path = "../shell" }
gitnexus-workspace-model = { path = "../workspace-model" }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
