[package]
name = "gitnexus-project-model"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["tree-sitter-extraction"]
tree-sitter-extraction = ["dep:tree-sitter", "dep:tree-sitter-rust"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
toml = "0.8"
tree-sitter = { version = "0.26", optional = true }
tree-sitter-rust = { version = "0.24", optional = true }
